--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT card component</title>
     
-    <link rel="stylesheet" href="images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" href="images/favicon-32x32.png" sizes="32x32">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="wrapper">
 
             <div class="page-image">
-                <img src="images/image-equilibrium.jpg" width="240px" height="200px" alt="page image">
+                <img src="images/image-equilibrium.jpg" width="240" height="200" alt="page image">
             </div>
 
             <h1 class="card-id">Equilibrium #3429</h1>
@@ -33,7 +33,7 @@
 
 
             <div class="footer">
-                <img src="images/image-avatar.png" width="20px" alt="avatar img">
+                <img src="images/image-avatar.png" width="20" alt="avatar img">
                 <p>Creation of <span class="white">Jules Wyvern</span></p>
             </div>
         </div>
