--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
+    <main class="container">
 
         <div class="wrapper">
 
@@ -36,7 +36,9 @@
                 <img src="images/image-avatar.png" width="20" alt="avatar img">
                 <p>Creation of <span class="white">Jules Wyvern</span></p>
             </div>
+
         </div>
-    </div>
+
+    </main>
 </body>
 </html>
