--- a/index.html
+++ b/index.html
@@ -3,42 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFT card component</title>
-    
-    <link rel="icon" href="images/favicon-32x32.png" sizes="32x32">
+
+    <title>Card Component</title>
+
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <main class="container">
-
+    <div class="container">
         <div class="wrapper">
+            <div class="text-component">
+                <h1 class="title">Get <span>insights</span> that help your business grow.</h1>
+                <p class="subtitle">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
 
-            <div class="page-image">
-                <img src="images/image-equilibrium.jpg" width="240" height="200" alt="page image">
+                <div class="stat-box">
+                    <div>
+                        <p class="num">10k</p>
+                        <p>companies</p>
+                    </div>
+                    <div>
+                        <p class="num">314</p>
+                        <p>templates</p>
+                    </div>
+                    <div>
+                        <p class="num">12m+</p>
+                        <p>queries</p>
+                    </div>
+                </div>
             </div>
-
-            <h1 class="card-id">Equilibrium #3429</h1>
-            <p class="para">Our Equilibrium collection promotes balance and calm.</p>
-
-            <div class="collection">
-                <p class="eth">
-                    <img src="images/icon-ethereum.svg" alt="eth">
-                    <span>0.041 ETH</span>
-                </p>
-                <p class="days">
-                    <img src="images/icon-clock.svg" alt="days">
-                    <span>3 days left</span>
-                </p>
+            <div class="img-component">
+                <img src="images/image-header-desktop.jpg" alt="page image">
             </div>
-
-
-            <div class="footer">
-                <img src="images/image-avatar.png" width="20" alt="avatar img">
-                <p>Creation of <span class="white">Jules Wyvern</span></p>
-            </div>
-
         </div>
-
-    </main>
+    </div>
 </body>
 </html>
